# RTS_univer

./: CMakeLists.txt  RTS.sln  RTS3.c
RTS/: RTS.vcxproj  main.c
lab2/: Lab2.vi
lab3/: main.c
lab4/: arr.c  arr.h  main.c  matr.c  matr.h  statistic.c  statistic.h
lab4_re/: main.c
